Bug 1717129 - Don't call into the native event loop while waiting to unwind into the NSMenu tracking event loop after closing a menu. r=harry

This avoids timeouts in some automated tests in certain scenarios.

Differential Revision: https://phabricator.services.mozilla.com/D118237